[Xiao]{fix}: change text-align for result cell

--- a/practiceDOM/shopping_cart.css
+++ b/practiceDOM/shopping_cart.css
@@ -34,3 +34,7 @@ th, td {
   font-size: 15px;
   background-color: #f2f2f2;
 }
+#result {
+  padding-right: 10px;
+  text-align: end;
+}
